core/erase excess revision snapshots: allow overriding the count of snapshots to keep, add exclusion flag for named snapshots
